@@ -56,7 +56,7 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.0/
    including) the matching template itself are applied to the matched content,
    whereas the match templates declared after the matching template are only
    applied to the generated content (ticket #186).
- * The `TemplateLoader` class now provides an `instantiate()` method that can
+ * The `TemplateLoader` class now provides an `_instantiate()` method that can
    be overridden by subclasses to implement advanced template instantiation
    logic (ticket #204).
  * The search path of the `TemplateLoader` class can now contain ''load
@@ -77,6 +77,8 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.0/
    positional arguments that would be substituted was removed. Thus the
    `Markup` class now supports the same arguments as that of its `unicode`
    base class (ticket #211).
+ * The `Template` class and its subclasses, as well as the interpolation API,
+   now take an `filepath` parameter instead of `basedir` (ticket #207).
 
 
 Version 0.4.4
